Java 25 support